Implement POST users/delete endpoint.
